--- a/Mygridwebpage.css
+++ b/Mygridwebpage.css
@@ -17,18 +17,24 @@
 img
 {
 	width: 100%;
+	display: block;
+	overflow: hidden;
 }
 
 .card
 {
   padding: 10px;
-  background-color: black;
+  background-color: orchid;
+  transform: scale(1);
+  transition: 0.3s ease-in-out;
  }
 
  .card:hover{
  background-color:white;
  font-size: 20px;
- }
+ transform: scale(1.5);
+ transform: rotate(180deg);
+  }
 
  body
  {
